# compilers-labs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  makefile
cmake/: CompileOptions.cmake
include/libc/: dump_tokens.hpp  parser.hpp
include/libc/ast/: Ast.hpp  ScopeChecker.hpp  TypeChecker.hpp  Visitor.hpp  XmlSerializer.hpp
include/libc/ast/detail/: Builder.hpp
src/c-compiler/: CMakeLists.txt  main.cpp
src/grammar/: C.g4  CLexer.g4  CMakeLists.txt
src/libc/: CMakeLists.txt  dump_tokens.cpp  parser.cpp
src/libc/ast/: Ast.cpp  ScopeChecker.cpp  XmlSerializer.cpp
src/libc/ast/detail/: Builder.cpp
tests/: CMakeLists.txt  dump_tokens.test.cpp
